--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
 .is-done {
     background: #00d1b2;
+    
 }
 
 .is-active {
     background: #209cee;
+    font-size: 24px;
+}
+
+.break {
+    background: #ffe785;
+}
+
+.is-next {
+    font-size: 24px;
 }
 
 .is-upcoming {
